--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Coding Quiz</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='assets/style.css'>
 </head>
 <body>
-    
+    <main>
+        <div id="timer">10</div>
+        <div id="questions">
+            <h3 id="question"></h3>
+            <p id="options"></p>
+            <button class="start-button">Start Quiz</button>
+        </div>
+        <div id="result"></div>
+    </main>
+
     <script src='assets/script.js'></script>
 </body>
 </html>
