--- a/index.html
+++ b/index.html
@@ -1,23 +1,81 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Coding Quiz</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel='stylesheet' type='text/css' media='screen' href='assets/style.css'>
 </head>
+
 <body>
     <main>
-        <div id="timer">10</div>
-        <div id="questions">
-            <h3 id="question"></h3>
-            <p id="options"></p>
-            <button class="start-button">Start Quiz</button>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm">
+                        <h1>Coding Quiz</h1>
+                        <p class="lead">This is a timed coding quiz with multiple-choice questions.</p>
+                    </div>
+                </div>
+                <hr class="my-4">
+                <div class="row">
+                    <div class="col-sm">
+                        <h2 id="timer">10</h2>
+                    </div>
+                    <div class="col-sm">
+                        <button class="start-button btn btn-success btn-lg btn-block">Start Quiz</button>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="container" id="questions">
+            <!-- Content here -->
+            <div class="row">
+                <div class="col-sm">
+                    <form>
+                        <h2 id="question">This is a question</h2>
+                        <fieldset class="form-group row">
+                            <div class="col" id="options">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="answerOptions" id="option2"
+                                        value="option1" checked>
+                                    <label class="form-check-label" for="option2">
+                                        option 1
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="answerOptions" id=""
+                                        value="option2">
+                                    <label class="form-check-label" for="option2">
+                                        option 2
+                                    </label>
+                                </div>
+                            </div>
+                          </fieldset>
+                          <div class="form-group row">
+                            <div class="col-sm-10">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                            </div>
+                          </div>
+                    </form>      
+                </div>
+            </div>
+        </div>
+
         <div id="result"></div>
     </main>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
+        <script src="assets/questionBank.js"></script>
     <script src='assets/script.js'></script>
 </body>
+
 </html>
