--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
                 <hr class="my-4">
                 <div class="row">
                     <div class="col-sm">
-                        <h2 id="timer">10</h2>
+                        <h2 id="timer"></h2>
                     </div>
                     <div class="col-sm">
                         <button class="start-button btn btn-success btn-lg btn-block">Start Quiz</button>
+                    </div>
+                    <div class="col-sm">
+                        <h2 id="score"></h2>
                     </div>
                 </div>
             </div>
@@ -36,11 +39,11 @@
             <!-- Content here -->
             <div class="row">
                 <div class="col-sm">
-                    <form>
-                        <h2 id="question">This is a question</h2>
-                        <fieldset class="form-group row">
+                    <form id="question-form">
+                        <h2 id="question"></h2>
+                        <!-- <fieldset class="form-group row"> -->
                             <div class="col" id="options">
-                                <div class="form-check">
+                                <!-- <div class="form-check"></div>
                                     <input class="form-check-input" type="radio" name="answerOptions" id="option2"
                                         value="option1" checked>
                                     <label class="form-check-label" for="option2">
@@ -53,20 +56,22 @@
                                     <label class="form-check-label" for="option2">
                                         option 2
                                     </label>
-                                </div>
+                                </div> -->
                             </div>
-                          </fieldset>
-                          <div class="form-group row">
+                          <!-- </fieldset> -->
+                          <button type="submit" id="submit-btn" class="mt-3 btn btn-primary d-none">Submit</button>
+                          <!-- <div class="form-group row">
                             <div class="col-sm-10">
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="submit" id="submit-btn" class="btn btn-primary">Submit</button>
                             </div>
-                          </div>
+                          </div> -->
                     </form>      
                 </div>
             </div>
+            <div class="row" id="result"></div>
         </div>
 
-        <div id="result"></div>
+        
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
