--- a/index.html
+++ b/index.html
@@ -12,26 +12,32 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <a class="navbar-brand mb-0 h1" href="#">Coding Quiz</a>
+        <span class="navbar-text pull-right">
+            <div class="col-sm">
+                <h3>Timer: <span id="timer"></span></h3>
+            </div>
+        </span>
+      </nav>
     <main>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
                         <h1>Coding Quiz</h1>
-                        <p class="lead">This is a timed coding quiz with multiple-choice questions.</p>
+                        <p class="lead">This is a timed coding quiz with multiple-choice questions. You will be able to see your final score and other high scores at the end of the quiz.</p>
                     </div>
                 </div>
                 <hr class="my-4">
                 <div class="row">
-                    <div class="col-sm">
-                        <h2 id="timer"></h2>
-                    </div>
+                    
                     <div class="col-sm">
                         <button class="start-button btn btn-success btn-lg btn-block">Start Quiz</button>
                     </div>
-                    <div class="col-sm">
+                    <!-- <div class="col-sm">
                         <h2 id="score"></h2>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -42,8 +48,8 @@
                     <form id="question-form">
                         <h2 id="question"></h2>
                         <!-- <fieldset class="form-group row"> -->
-                            <div class="col" id="options">
-                                <!-- <div class="form-check"></div>
+                        <div class="col" id="options">
+                            <!-- <div class="form-check"></div>
                                     <input class="form-check-input" type="radio" name="answerOptions" id="option2"
                                         value="option1" checked>
                                     <label class="form-check-label" for="option2">
@@ -57,15 +63,15 @@
                                         option 2
                                     </label>
                                 </div> -->
-                            </div>
-                          <!-- </fieldset> -->
-                          <button type="submit" id="submit-btn" class="mt-3 btn btn-primary d-none">Submit</button>
-                          <!-- <div class="form-group row">
+                        </div>
+                        <!-- </fieldset> -->
+                        <button type="submit" id="submit-btn" class="mt-3 btn btn-primary d-none">Submit</button>
+                        <!-- <div class="form-group row">
                             <div class="col-sm-10">
                                 <button type="submit" id="submit-btn" class="btn btn-primary">Submit</button>
                             </div>
                           </div> -->
-                    </form>     
+                    </form>
                 </div>
             </div>
             <div class="row" id="scores">
@@ -74,11 +80,26 @@
                     <p>Please enter your initials below to save your score.</p>
                     <input type="text" id="initials" name="initials">
                     <button type="submit" id="save-score" class="btn btn-success">Save</button>
-                </form> 
+                </form>
+                <div id="high-scores" class="col-sm-12 d-none">
+                    <h2> High Scores: </h2>
+                    <table class="table" id="high-score-table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Initials</th>
+                                <th scope="col">Score</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
+
             </div>
         </div>
 
-        
+
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -86,7 +107,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-        <script src="assets/questionBank.js"></script>
+    <script src="assets/questionBank.js"></script>
     <script src='assets/script.js'></script>
 </body>
 
