--- a/index.html
+++ b/index.html
@@ -83,17 +83,18 @@
                 </form>
                 <div id="high-scores" class="col-sm-12 d-none">
                     <h2> High Scores: </h2>
-                    <table class="table" id="high-score-table">
+                    <div class="table-responsive" id="high-score-table">
+
+                    </div>
+                    <!-- <table class="table">
                         <thead>
                             <tr>
                                 <th scope="col">Initials</th>
                                 <th scope="col">Score</th>
                             </tr>
                         </thead>
-                        <tbody>
-
-                        </tbody>
-                    </table>
+                        
+                    </table> -->
                 </div>
 
             </div>
