--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
                 <h3>Timer: <span id="timer"></span></h3>
             </div>
         </span>
-      </nav>
+    </nav>
     <main>
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid py-4">
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
-                        <h1>Coding Quiz</h1>
-                        <p class="lead">This is a timed coding quiz with multiple-choice questions. You will be able to see your final score and other high scores at the end of the quiz.</p>
+                        <h1>Coding Quiz - HTML</h1>
+                        <p class="lead">This is a timed coding quiz with multiple-choice questions. You will get negative marking for a wrong answer and 5 seconds will also be deducted from your remaining time. You will be able to
+                            see your final score and other high scores at the end of the quiz.</p>
                     </div>
                 </div>
                 <hr class="my-4">
                 <div class="row">
-                    
+
                     <div class="col-sm">
                         <button class="start-button btn btn-success btn-lg btn-block">Start Quiz</button>
                     </div>
@@ -48,7 +49,7 @@
                     <form id="question-form">
                         <h2 id="question"></h2>
                         <!-- <fieldset class="form-group row"> -->
-                        <div class="col" id="options">
+                        <div class="col my-3" id="options">
                             <!-- <div class="form-check"></div>
                                     <input class="form-check-input" type="radio" name="answerOptions" id="option2"
                                         value="option1" checked>
@@ -65,7 +66,13 @@
                                 </div> -->
                         </div>
                         <!-- </fieldset> -->
-                        <button type="submit" id="submit-btn" class="mt-3 btn btn-primary d-none">Submit</button>
+                        <div class="correct alert alert-success" role="alert">
+                            Correct Answer
+                        </div>
+                        <div class="incorrect alert alert-danger" role="alert">
+                            Incorrect Answer
+                        </div>
+                        <button type="submit" id="submit-btn" class="btn btn-primary d-none">Submit</button>
                         <!-- <div class="form-group row">
                             <div class="col-sm-10">
                                 <button type="submit" id="submit-btn" class="btn btn-primary">Submit</button>
@@ -82,7 +89,7 @@
                     <button type="submit" id="save-score" class="btn btn-success">Save</button>
                 </form>
                 <div id="high-scores" class="col-sm-12 d-none">
-                    <h2> High Scores: </h2>
+                    <h2>High Scores</h2>
                     <div class="table-responsive" id="high-score-table">
 
                     </div>
