added nav link to high scores

--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <a class="navbar-brand mb-0 h1" href="#">Coding Quiz</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand mb-0 h1 reset-button" href="#">Coding Quiz</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link high-score-btn" href="#">High Scores</a>
+              </li>
+            </ul>
+          </div>
+
+
+
+        
         <span class="navbar-text pull-right">
             <div class="col-sm">
                 <h3>Timer: <span id="timer"></span></h3>
