--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
         <a class="navbar-brand mb-0 h1 reset-button" href="#">Coding Quiz</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link high-score-btn" href="#">High Scores</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link high-score-btn" href="#">High Scores</a>
+                </li>
             </ul>
-          </div>
+        </div>
 
-
-
-        
         <span class="navbar-text pull-right">
             <div class="col-sm">
                 <h3>Timer: <span id="timer"></span></h3>
@@ -37,7 +34,9 @@
                 <div class="row">
                     <div class="col-sm">
                         <h1>Coding Quiz - HTML</h1>
-                        <p class="lead">This is a timed coding quiz with multiple-choice questions. You will get negative marking for a wrong answer and 5 seconds will also be deducted from your remaining time. You will be able to
+                        <p class="lead">This is a timed coding quiz with multiple-choice questions. You will get
+                            negative marking for a wrong answer and 5 seconds will also be deducted from your remaining
+                            time. You will be able to
                             see your final score and other high scores at the end of the quiz.</p>
                     </div>
                 </div>
@@ -47,9 +46,6 @@
                     <div class="col-sm">
                         <button class="start-button btn btn-success btn-lg btn-block">Start Quiz</button>
                     </div>
-                    <!-- <div class="col-sm">
-                        <h2 id="score"></h2>
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -59,24 +55,8 @@
                 <div class="col-sm">
                     <form id="question-form">
                         <h2 id="question"></h2>
-                        <!-- <fieldset class="form-group row"> -->
                         <div class="col my-3" id="options">
-                            <!-- <div class="form-check"></div>
-                                    <input class="form-check-input" type="radio" name="answerOptions" id="option2"
-                                        value="option1" checked>
-                                    <label class="form-check-label" for="option2">
-                                        option 1
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="answerOptions" id=""
-                                        value="option2">
-                                    <label class="form-check-label" for="option2">
-                                        option 2
-                                    </label>
-                                </div> -->
                         </div>
-                        <!-- </fieldset> -->
                         <div class="correct alert alert-success" role="alert">
                             Correct Answer
                         </div>
@@ -84,11 +64,6 @@
                             Incorrect Answer
                         </div>
                         <button type="submit" id="submit-btn" class="btn btn-primary d-none">Submit</button>
-                        <!-- <div class="form-group row">
-                            <div class="col-sm-10">
-                                <button type="submit" id="submit-btn" class="btn btn-primary">Submit</button>
-                            </div>
-                          </div> -->
                     </form>
                 </div>
             </div>
@@ -101,24 +76,10 @@
                 </form>
                 <div id="high-scores" class="col-sm-12 d-none">
                     <h2>High Scores</h2>
-                    <div class="table-responsive" id="high-score-table">
-
-                    </div>
-                    <!-- <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">Initials</th>
-                                <th scope="col">Score</th>
-                            </tr>
-                        </thead>
-                        
-                    </table> -->
+                    <div class="table-responsive" id="high-score-table"></div>
                 </div>
-
             </div>
         </div>
-
-
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
